// Copyright 2022 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message VertexaiBetaModelDeployment {
  string model = 1;
  string deployed_model_id = 2;
  VertexaiBetaModelDeploymentDedicatedResources dedicated_resources = 3;
  string endpoint = 4;
  string location = 5;
  string project = 6;
}

message VertexaiBetaModelDeploymentDedicatedResources {
  VertexaiBetaModelDeploymentDedicatedResourcesMachineSpec machine_spec = 1;
  int64 min_replica_count = 2;
  int64 max_replica_count = 3;
}

message VertexaiBetaModelDeploymentDedicatedResourcesMachineSpec {
  string machine_type = 1;
}

message ApplyVertexaiBetaModelDeploymentRequest {
  VertexaiBetaModelDeployment resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteVertexaiBetaModelDeploymentRequest {
  string service_account_file = 1;
  VertexaiBetaModelDeployment resource = 2;
}

message ListVertexaiBetaModelDeploymentRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
  string Endpoint = 4;
}

message ListVertexaiBetaModelDeploymentResponse {
  repeated VertexaiBetaModelDeployment items = 1;
}

service VertexaiBetaModelDeploymentService {
  rpc ApplyVertexaiBetaModelDeployment(ApplyVertexaiBetaModelDeploymentRequest) returns (VertexaiBetaModelDeployment);
  rpc DeleteVertexaiBetaModelDeployment(DeleteVertexaiBetaModelDeploymentRequest) returns (google.protobuf.Empty);
  rpc ListVertexaiBetaModelDeployment(ListVertexaiBetaModelDeploymentRequest) returns (ListVertexaiBetaModelDeploymentResponse);
}
